three months fix test

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <h1>Website Directory</h1>
 
-    <a href="WebDev/ThreeMonthsEvents/index.html">Three Months Events</a>
+    <a href="ThreeMonthsEvents/index.html">Three Months Events</a>
 
 </body>
 </html>
