--- a/03FollowAlong/signers.html
+++ b/03FollowAlong/signers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <title>America's Founding Documents: Who Were the Signers?</title>
 
 </head>
+
 <body>
 
     <header>
@@ -27,6 +29,66 @@
 
     <main>
         <h1>Who Were the Signers?</h1>
+        <h2>Famous Signers</h2>
+
+        <h3>The Declaration of Independence was signed by 56 delegates to the Continental Congress. Some of the most
+            famous signers include:</h3>
+        <dl>
+            <dt>John Hancock</dt>
+            <dd>Known for his bold signature, Hancock was the President of the Continental Congress at the time. His
+                name became synonymous with "signature" due to how prominent his autograph was on the document.</dd>
+
+            <dt>Thomas Jefferson</dt>
+            <dd>The primary author of the Declaration, Jefferson went on to become the third President of the United
+                States and is a major figure in American history.</dd>
+
+            <dt>Benjamin Franklin</dt>
+            <dd>A founding father, scientist, and diplomat, Franklin was one of the most respected figures in America
+                and abroad. He later served as the U.S. Ambassador to France and played a crucial role in securing
+                French support during the American Revolution.</dd>
+
+            <dt>John Adams</dt>
+            <dd>A key advocate for independence, Adams was a leader in the Continental Congress and would later become
+                the second President of the United States.</dd>
+
+            <dt>Samuel Adams</dt>
+            <dd>A cousin of John Adams, Samuel was a firebrand for independence and a leader of the Massachusetts rebels
+                who pushed for resistance to British rule.</dd>
+
+            <dt>Richard Henry Lee</dt>
+            <dd>Known for proposing the resolution for independence at the Continental Congress, Lee was a strong
+                advocate for the break from Britain.</dd>
+
+            <dt>Charles Carroll</dt>
+            <dd>The only Catholic signer of the Declaration, Carroll was a wealthy landowner and a strong supporter of
+                independence. He later served in the U.S. Senate.</dd>
+
+            <dt>Francis Lewis</dt>
+            <dd>A wealthy merchant and public official, Lewis was an important figure in the Revolutionary War effort.
+            </dd>
+
+            <dt>Elbridge Gerry</dt>
+            <dd>A delegate from Massachusetts, Gerry later became the fifth Vice President of the United States.</dd>
+
+            <dt>Roger Sherman</dt>
+            <dd>A representative from Connecticut, Sherman is the only person to have signed all four major founding
+                documents: the Continental Association, the Declaration of Independence, the Articles of Confederation,
+                and the U.S. Constitution.</dd>
+        </dl>
+
+        <h2>Signers by State</h2>
+        <h3>Georgia</h3>
+        <ul>
+            <li>Button Gwinnett</li>
+            <li>Lyman Hall</li>
+            <li>George Walton</li>
+        </ul>
+        <h3>North Carolina</h3>
+        <ul>
+            <li>William Hoopoer</li>
+            <li>Joseph Hewes</li>
+            <li>John Penn</li>
+        </ul>
     </main>
 
 
@@ -35,4 +97,5 @@
     </footer>
 
 </body>
+
 </html>
