--- a/03FollowAlong/index.html
+++ b/03FollowAlong/index.html
@@ -27,6 +27,29 @@
 
     <main>
         <h1>Declaration of Independence</h1>
+        <h2>What is says</h2>
+            <p>"We hold these truths to be <strong>self-evident</strong>, that all men are <em>created equal</em>, <br>
+                that they are endowed by their Creator with certain unalienable rights,  <br>
+                 that among these are Life, Liberty and the Pursuit of happiness."</p>
+       
+       <p>
+        <a href="https://www.archives.gov/founding-docs/declaration-transcript" target="_blank">Source</a>
+       </p>
+                 <h2>Why we are upset</h2>
+        <ol>
+            <li>He has refused his Assent to Laws, the most wholesome and necessary for the public good.</li>
+            <li>He has forbidden his Governors to pass Laws of immediate and pressing importance,<br>
+                 unless suspended in their operation till his Assent should be obtained; <br>
+                 and when so suspended, he has utterly neglected to attend to them.</li>
+        </ol>
+
+        <h2>Location</h2>
+        <address>
+            National Archives <br>
+            701 Constitution Avenue, NW, <br>
+            Washington, DC 20408 <br>
+            Call us at <a href="tel:8005551234">800-555-1234</a> to schedule a visit <br>
+        </address>
     </main>
 
 
