--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Website Directory</h1>
 
     <a href="ThreeMonthsEvents/index.html">Three Months Events</a>
+    <a href="03FollowAlong/index.html">03FollowAlong</a>
 
 </body>
 </html>
