Fulfilled all checks of Hand-coding
Objective page finished, Home page no longer lists pokemon, now defines what Unite is

--- a/CustomWebsite/mechanics.html
+++ b/CustomWebsite/mechanics.html
@@ -16,7 +16,6 @@
      <nav>
  
         <ul><a href="index.html">Home Page</a></ul>
-        <ul><a href="whatispokemonunite.html">What is Pokemon Unite?</a></ul>
         <ul><a href="objectives.html">Objectives</a></ul>
         <ul><a href="pokemon.html">Pokemon</a></ul>
         <ul><a href="strats.html">Strats</a></ul>
@@ -26,5 +25,17 @@
     
 
     </nav>
+
+    <main></main>
+
+    <footer>
+<p> &copy; 2025 &bull; Finn Price &bull; Web Dev </p>
+ <address>
+            Unite ESports <br>
+            930 500 E, Heber City <br>
+            Utah, 84023 <br>
+            Call us at <a href="tel:8005551234">800-555-1234</a> to learn more<br>
+        </address>
+    </footer>
 </body>
 </html>
