Errorless Index and Objectives

--- a/CustomWebsite/index.html
+++ b/CustomWebsite/index.html
@@ -19,13 +19,13 @@
 
     <nav>
         
-        <ul><a href="index.html">Home Page</a></ul>
-        <ul><a href="objectives.html">Objectives</a></ul>
-        <ul><a href="pokemon.html">Pokemon</a></ul>
-        <ul><a href="strats.html">Strats</a></ul>
-        <ul><a href="mechanics.html">Mechanics</a></ul>
-        <ul><a href="items.html">Items</a></ul>
-        <ul><a href="patchnotes.html">Patch Notes</a></ul>
+        <ul><li><a href="index.html">Home Page</a></li>
+        <li><a href="objectives.html">Objectives</a></li>
+        <li><a href="pokemon.html">Pokemon</a></li>
+        <li><a href="strats.html">Strats</a></li>
+        <li><a href="mechanics.html">Mechanics</a></li>
+        <li><a href="items.html">Items</a></li>
+        <li><a href="patchnotes.html">Patch Notes</a></li></ul>
     
 
     </nav>
