--- a/CustomWebsite/objectives.html
+++ b/CustomWebsite/objectives.html
@@ -15,13 +15,13 @@
 
      <nav>
  
-        <ul><a href="index.html">Home Page</a></ul>
-        <ul><a href="objectives.html">Objectives</a></ul>
-        <ul><a href="pokemon.html">Pokemon</a></ul>
-        <ul><a href="strats.html">Strats</a></ul>
-        <ul><a href="mechanics.html">Mechanics</a></ul>
-        <ul><a href="items.html">Items</a></ul>
-        <ul><a href="patchnotes.html">Patch Notes</a></ul>
+        <ul><li><a href="index.html">Home Page</a></li>
+        <li><a href="objectives.html">Objectives</a></li>
+        <li><a href="pokemon.html">Pokemon</a></li>
+        <li><a href="strats.html">Strats</a></li>
+        <li><a href="mechanics.html">Mechanics</a></li>
+        <li><a href="items.html">Items</a></li>
+        <li><a href="patchnotes.html">Patch Notes</a></li></ul>
         
     
 
@@ -32,12 +32,15 @@
         <p>Almost all objectives grant every team meber who assisted in the KO healing equal to 30% of their max HP (not just the person who registered the last hit) and global exp. <br>
         Regidrago does <em>not</em> provide any healing, and Regieleki only grants exp <strong>locally</strong>.</p>
         <h1>What does each objective do?</h1>
-        <ol><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=Registeel-,Groudon,-What%20does%20Groudon">Groudon</a></ol>
-        <ol><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=boost%3A%20300%25%20increase-,Regidrago,-What%20does%20Regidrago">Regidrago</a></ol>
-        <ol><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=Duration%3A%2060%20seconds-,Regieleki,-What%20does%20Regieleki">Regieleki</a></ol>
-        <ol><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=and%208%20Points-,Regirock,-What%20does%20Regirock">Regirock</a></ol>
-        <ol><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=for%2090%20seconds-,Regice,-What%20does%20Regice">Regice</a></ol>
-        <ol><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=for%2090%20seconds-,Registeel,-What%20does%20Registeel">Registeel</a></ol>
+
+        <ol>
+         <li> <a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=Registeel-,Groudon,-What%20does%20Groudon">Groudon</a></li>  
+        <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=boost%3A%20300%25%20increase-,Regidrago,-What%20does%20Regidrago">Regidrago</a></li>
+        <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=Duration%3A%2060%20seconds-,Regieleki,-What%20does%20Regieleki">Regieleki</a></li>
+        <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=and%208%20Points-,Regirock,-What%20does%20Regirock">Regirock</a></li>
+        <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=for%2090%20seconds-,Regice,-What%20does%20Regice">Regice</a></li>
+        <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=for%2090%20seconds-,Registeel,-What%20does%20Registeel">Registeel</a></li>
+    </ol>
 
         <h1>Groudon</h1>
         <img src="https://img.game8.co/4270506/9a7d48ef8a97bc04ad9f5ff60ed5e160.png/show" alt="Groudon.png">
@@ -76,10 +79,12 @@
         <h2>Regieleki "Buff"</h2>
         <p>If Regieleki reaches a goal, it will reward the team who defeat Regieleki points and make the goal defenseless for up to 25 seconds. Depending on how much health Regieleki had upon <br>
             reaching the goal, the goal will be defenseless for a set amount of time:</p>
-        <ul>61-100% Health: 25 Second Vulnerability and 20 Points</ul>
-        <ul>41-60% Health: 20 Second Vulnerability and 16 Points</ul>
-        <ul>21-40% Health: 15 Second Vulnerability and 12 Points</ul>
-        <ul>1-20% Health: 15 Second Vulnerability and 8 Points</ul>
+        <ol>
+        <li>61-100% Health: 25 Second Vulnerability and 20 Points</li>
+        <li>41-60% Health: 20 Second Vulnerability and 16 Points</li>
+        <li>21-40% Health: 15 Second Vulnerability and 12 Points</li>
+        <li>1-20% Health: 15 Second Vulnerability and 8 Points</li>
+        </ol>
 
         <br>
         <h1>Regirock</h1>
