--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <a href="ThreeMonthsEvents/index.html">Three Months Events</a>
     <a href="03FollowAlong/index.html">03FollowAlong</a>
     <a href="CustomWebsite/index.html">CustomWebsite</a>
-
+    <a href="04follow-along/">04FollowAlong</a>
 </body>
 </html>
