--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     
     <h1>Website Directory</h1>
 
-    <a href="ThreeMonthsEvents/index.html">Three Months Events</a>
+    <a href="01Intro/index.html">Three Months Events</a>
     <a href="03FollowAlong/index.html">03FollowAlong</a>
-    <a href="CustomWebsite/index.html">CustomWebsite</a>
+    <a href="03HandCodingHTML/">03Han</a>
     <a href="04follow-along/index.html">04FollowAlong</a>
 </body>
 </html>
