--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <a href="01Intro/index.html">Three Months Events</a>
     <a href="03FollowAlong/index.html">03FollowAlong</a>
-    <a href="03HandCodingHTML/">03HandCodingHTML</a>
-    <a href="04follow-along/index.html">04FollowAlong</a>
+    <a href="03HandCodingHTML/index.html">03HandCodingHTML</a>
+    <a href="04intro-css/index.html">04FollowAlong</a>
 </body>
 </html>
