Added 04 project to home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="01Intro/index.html">Three Months Events</a>
     <a href="03FollowAlong/index.html">03FollowAlong</a>
     <a href="03HandCodingHTML/index.html">03HandCodingHTML</a>
-    <a href="04intro-css/index.html">04FollowAlong</a>
+    <a href="04follow-along/index.html">04FollowAlong</a>
+    <a href="04intro-css/index.html">04intro-css</a>
 </body>
 </html>
