05FollowAlong Complete and on landing page

--- a/03HandCodingHTML/objectives.html
+++ b/03HandCodingHTML/objectives.html
@@ -46,7 +46,7 @@
     </ol>
 
         <h1>Groudon</h1>
-        <img src="https://img.game8.co/4270506/9a7d48ef8a97bc04ad9f5ff60ed5e160.png/show" alt="Groudon.png">
+        <img src="https://img.game8.co/4270506/9a7d48ef8a97bc04ad9f5ff60ed5e160.png/show" alt="Groudon.png" width="600" height="314">
         <h2>What does Groudon Do?</h2>
         <p>Groudon spawns at the 2:00 mark on Theia Sky Ruins. When a team defeats Groudon, all members of that team will have their atack power and gaol-scoring speed greatly increased. <br>
         But not only that, if you KO a Pokemon that's under this effect, the effect will transfer to your Pokemon. That way, even the team that didn't defeat Groudon will have a chance to <br>
