--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="03HandCodingHTML/index.html">03HandCodingHTML</a>
     <a href="04follow-along/index.html">04FollowAlong</a>
     <a href="04intro-css/index.html">04intro-css</a>
+    <a href="05follow-along/index.html">05FollowAlong</a>
 </body>
 </html>
