05Images Complete and added on landing page

--- a/03HandCodingHTML/items.html
+++ b/03HandCodingHTML/items.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Items</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Finn Price">
-    <meta name="description" content="A list of items and descriptions for what they do">
+    <meta name="description" content="A website about Pokemon Unite">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=DM+Serif+Text:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <style>
+
+    .flex-container{
+            
+            margin: 10px;
+            padding: 20px;
+            font-size: 48px;
+            display: flex;
+            flex-direction: column;
+        }
+
+
+    </style>
 </head>
 <body>
    
@@ -14,13 +32,14 @@
     </header>
      <nav>
  
-        <ul><a href="index.html">Home Page</a></ul>
-        <ul><a href="objectives.html">Objectives</a></ul>
-        <ul><a href="pokemon.html">Pokemon</a></ul>
-        <ul><a href="strats.html">Strats</a></ul>
-        <ul><a href="mechanics.html">Mechanics</a></ul>
-        <ul><a href="items.html">Items</a></ul>
-        <ul><a href="patchnotes.html">Patch Notes</a></ul>
+        <ul><li><a href="index.html">Home Page</a></li>
+        <li><a href="objectives.html">Objectives</a></li>
+        <li><a href="pokemon.html">Pokemon</a></li>
+        <li><a href="strats.html">Strats</a></li>
+        <li><a href="mechanics.html">Mechanics</a></li>
+        <li><a href="items.html" class="active">Items</a></li>
+        <li><a href="patchnotes.html">Patch Notes</a></li>
+        <li><a href="gallery.html">Gallery</a></li></ul>
     
 
     </nav>
