--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="04follow-along/index.html">04FollowAlong</a>
     <a href="04intro-css/index.html">04intro-css</a>
     <a href="05follow-along/index.html">05FollowAlong</a>
+    <a href="05images/index.html">05Images</a>
 </body>
 </html>
