--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <a href="04intro-css/index.html">04intro-css</a>
     <a href="05follow-along/index.html">05FollowAlong</a>
     <a href="05images/index.html">05Images</a>
-    <a href="06-start/index.html">06FollowAlong</a>
+    <a href="06-start\unit6-start/index.html">06FollowAlong</a>
 </body>
 </html>
