06 Form Project Done and on landing Page

--- a/03HandCodingHTML/objectives.html
+++ b/03HandCodingHTML/objectives.html
@@ -25,7 +25,8 @@
         <li><a href="mechanics.html">Mechanics</a></li>
         <li><a href="items.html">Items</a></li>
         <li><a href="patchnotes.html">Patch Notes</a></li>
-        <li><a href="gallery.html">Gallery</a></li></ul>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="member.html">Become A Member</a></li></ul>
         
     
 
