--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="05follow-along/index.html">05FollowAlong</a>
     <a href="05images/index.html">05Images</a>
     <a href="06-start\unit6-start/index.html">06FollowAlong</a>
+    <a href="06form/index.html">06FormProject</a>
 </body>
 </html>
