--- a/03HandCodingHTML/gallery.html
+++ b/03HandCodingHTML/gallery.html
@@ -41,7 +41,8 @@
         <li><a href="mechanics.html">Mechanics</a></li>
         <li><a href="items.html">Items</a></li>
         <li><a href="patchnotes.html">Patch Notes</a></li>
-        <li><a href="gallery.html" class="active">Gallery</a></li></ul>
+        <li><a href="gallery.html" class="active">Gallery</a></li>
+        <li><a href="member.html">Become A Member</a></li></ul>
     
     </nav>
 <div class="flex-container">
