--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="05images/index.html">05Images</a>
     <a href="06-start\unit6-start/index.html">06FollowAlong</a>
     <a href="06form/index.html">06FormProject</a>
+    <a href="unit7-start/index.html">07FollowAlong</a>
 </body>
 </html>
