--- a/03HandCodingHTML/objectives.html
+++ b/03HandCodingHTML/objectives.html
@@ -8,6 +8,7 @@
     <meta name="description" content="What each objective does in Pokemon Unite">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=DM+Serif+Text:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
@@ -45,10 +46,11 @@
         <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=and%208%20Points-,Regirock,-What%20does%20Regirock">Regirock</a></li>
         <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=for%2090%20seconds-,Regice,-What%20does%20Regice">Regice</a></li>
         <li><a href="http://127.0.0.1:5500/CustomWebsite/objectives.html#:~:text=for%2090%20seconds-,Registeel,-What%20does%20Registeel">Registeel</a></li>
+        </ul>
     </ol>
 
         <h1>Groudon</h1>
-        <img src="https://img.game8.co/4270506/9a7d48ef8a97bc04ad9f5ff60ed5e160.png/show" alt="Groudon.png" width="600" height="314">
+        <img src="https://img.game8.co/4270506/9a7d48ef8a97bc04ad9f5ff60ed5e160.png/show" alt="Groudon.png" width="600" height="314" class="objective">
         <h2>What does Groudon Do?</h2>
         <p>Groudon spawns at the 2:00 mark on Theia Sky Ruins. When a team defeats Groudon, all members of that team will have their atack power and gaol-scoring speed greatly increased. <br>
         But not only that, if you KO a Pokemon that's under this effect, the effect will transfer to your Pokemon. That way, even the team that didn't defeat Groudon will have a chance to <br>
@@ -65,7 +67,7 @@
 
         <br>
          <h1>Regidrago</h1>
-         <img src="https://img.game8.co/4270596/e1bf97d216f6c6d93b570b2424a8c51e.png/show" alt="Regidrago.png">
+         <img src="https://img.game8.co/4270596/e1bf97d216f6c6d93b570b2424a8c51e.png/show" alt="Regidrago.png" class="objective">
          <h2>What does Regidrago do?</h2>
          <p>Regidrago spawns at the 8:00 mark on Theia Sky Ruins. When a team defeats Regidrago, the user who secures Regidrago will have an increased goal-scoring speed. After Regidrago <br>
         spawns in the center of the map, Regidrago will roam between the top and bottom of the map, staying in the center. Regidrago can either respawn, or an Altaria camp can spawn in its place.</p>
@@ -76,7 +78,7 @@
         <br>
 
         <h1>Regieleki</h1>
-        <img src="https://img.game8.co/3584081/8ea51bf94da451cb50c6b6be8df607f0.png/show" alt="Regieleki.png">
+        <img src="https://img.game8.co/3584081/8ea51bf94da451cb50c6b6be8df607f0.png/show" alt="Regieleki.png" class="objective">
         <h2>What does Regieleki do?</h2>
         <p>Regieleki spawns at the 7:00 mark on Theia Sky Ruins on either the top or bottom lane. When a team defeats Regieleki, Regieleki will approach the opposing team's nearest goal. <br>
             While Regieleki is approaching a goal, it will act hostile towards the opposing team and act as though it was on the team of whomever defeat Regieleki. Regieleki will respawn <br>
@@ -93,7 +95,7 @@
 
         <br>
         <h1>Regirock</h1>
-        <img src="https://img.game8.co/3585978/e685827cb487c93beb4658e92b7b38d6.png/show" alt="Regirock.png">
+        <img src="https://img.game8.co/3585978/e685827cb487c93beb4658e92b7b38d6.png/show" alt="Regirock.png" class="objective">
         <h2>What does Regirock do?</h2>
         <p>Regirock spawns at the 7:00 mark on Theia Sky Ruins on either the top or bottom lane. When a team defeats Regirock, that team will be awarded with a sheild, and a temporary increase <br>
         to their defensive stats. Regirock can respawn 3 minutes after it is defeated; it will respawn on the lane it initially spawned in; any of Regirock, Regice, and Registeel can spawn in <br>
@@ -106,7 +108,7 @@
 
         <br>
         <h1>Regice</h1>
-        <img src="https://img.game8.co/3586177/068dee59d0a328344050a3845aa51c20.png/show" alt="Regice.png">
+        <img src="https://img.game8.co/3586177/068dee59d0a328344050a3845aa51c20.png/show" alt="Regice.png" class="objective">
         <h2>What does Regice do?</h2>
         <p>Regice spawns at the 7:00 mark on Theia Sky Ruins on either the top or bottom lane. When a team defeats Regice, that team will be awarded with a sheild, and slowly regenerate health overtime <br>
              Regice can respawn 3 minutes after it is defeated; it will respawn on the lane it initially spawned in; any of Regirock, Regice, and Registeel can spawn in <br>
@@ -119,7 +121,7 @@
 
         <br>
         <h1>Registeel</h1>
-        <img src="https://img.game8.co/3586217/7acc477a6664da2453cdd99715894c18.png/show" alt="Regi.png">
+        <img src="https://img.game8.co/3586217/7acc477a6664da2453cdd99715894c18.png/show" alt="Regi.png" class="objective">
         <h2>What does Registeel do?</h2>
         <p>Registeel spawns at the 7:00 mark on Theia Sky Ruins on either the top or bottom lane. When a team defeats Registeel, that team will be awarded with a sheild, and increaded attack stats. <br>
              Registeel can respawn 3 minutes after it is defeated; it will respawn on the lane it initially spawned in; any of Regirock, Regice, and Registeel can spawn in place of any of them.</p>
