--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="06-start\unit6-start/index.html">06FollowAlong</a>
     <a href="06form/index.html">06FormProject</a>
     <a href="unit7-start/index.html">07FollowAlong</a>
+    <a href="07advanced-css/index.html">07Advanced CSS Project</a>
 </body>
 </html>
