--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <a href="06form/index.html">06FormProject</a>
     <a href="unit7-start/index.html">07FollowAlong</a>
     <a href="07advanced-css/index.html">07Advanced CSS Project</a>
+    <a href="08follow-along/index.html"></a>
 </body>
 </html>
