Added 08 follow along to landing page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <a href="06form/index.html">06FormProject</a>
     <a href="unit7-start/index.html">07FollowAlong</a>
     <a href="07advanced-css/index.html">07Advanced CSS Project</a>
-    <a href="08follow-along/index.html"></a>
+    <a href="08follow-along/index.html">08follow-along</a>
 </body>
 </html>
