08 Project Complete and on Landing Page

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="unit7-start/index.html">07FollowAlong</a>
     <a href="07advanced-css/index.html">07Advanced CSS Project</a>
     <a href="08follow-along/index.html">08follow-along</a>
+    <a href="08media/index.html">08media Project</a>
 </body>
 </html>
