--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <a href="07advanced-css/index.html">07Advanced CSS Project</a>
     <a href="08follow-along/index.html">08follow-along</a>
     <a href="08media/index.html">08media Project</a>
+    <a href="vacation/index.html">Vacation Website (CAPSTONE)</a>
 </body>
 </html>
